fixed some stuff

--- a/mobile/stories/destructionofearth.html
+++ b/mobile/stories/destructionofearth.html
@@ -10,7 +10,7 @@
     <title>The Destruction of Earth as we know it</title>
     
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="https://ph03be.glitch.me/mobile/style.css">
+    <link rel="stylesheet" href="https://phoebe-leong.github.io/mobile/style.css">
     
   </head>
   <nav class="navbar">
