--- a/projects.html
+++ b/projects.html
@@ -3,26 +3,25 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="https://phoebe-leong.github.io/favicon.png">
-        <title>Projects</title>
     </head>
     <nav class="navbar">
         <ul>
-          <a class="navlink" href="https://ph03be.glitch.me/mobile/index.html">Home</a><br><br>
-          <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a><br><br>
-          <a class="navlink" href="https://phoebe-leong.github.io/mobile/projects.html">Programming</a><br><br>
-          <a class="navlink" href="https://phoebe-leong.github.io/mobile/websites.html">Websites</a><br><br>
-          <a class="navlink" href="https://phoebe-leong.github.io/mobile/stories.html">Stories</a><br><br>
+          <a class="navlink" href="index.html">Home</a>
+          <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a>
+          <a class="navlink" href="https://github.com/phoebe-leong?tab=repositories" target="_blank">Programming</a>
+          <a class="navlink" href="websites.html">Websites</a>
+          <a class="navlink" href="stories.html">Stories</a>
           <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
         </ul>
       </nav><br><br><br><br><br><br><br>
-    <body>
-        <main>
+      <body>
+          <main>
             <ul>
                 <h2>Projects</h2>
                 <li><a href="https://github.com/phoebe-leong/CodeHub">CodeHub</a></li>
                 <li><a href="https://github.com/phoebe-leong/CapitalismInANutshell">Capitalism In A Nutshell</a></li>
                 <li><a href="https://phoebe-leong.github.io/login-proj/">Login</a></li> 
             </ul>
-        </main>
-    </body>
+          </main>
+      </body>
 </html>
