fixed nav links

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -28,7 +28,7 @@
       <ul>
         <a class="navlink" href="index.html">Home</a><br><br>
         <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a><br><br>
-        <a class="navlink" href="https://github.com/phoebe-leong?tab=repositories" target="_blank">Programming</a><br><br>
+        <a class="navlink" href="projects.html">Programming</a><br><br>
         <a class="navlink" href="websites.html">Websites</a><br><br>
         <a class="navlink" href="stories.html">Stories</a><br><br>
         <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
