--- a/mobile/projects.html
+++ b/mobile/projects.html
@@ -9,9 +9,9 @@
         <ul>
           <a class="navlink" href="https://ph03be.glitch.me/mobile/index.html">Home</a><br><br>
           <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a><br><br>
-          <a class="navlink" href="https://phoebe-leong.github.io/mobile/projects.html">Programming</a><br><br>
-          <a class="navlink" href="https://phoebe-leong.github.io/mobile/websites.html">Websites</a><br><br>
-          <a class="navlink" href="https://phoebe-leong.github.io/mobile/stories.html">Stories</a><br><br>
+          <a class="navlink" href="projects.html">Programming</a><br><br>
+          <a class="navlink" href="websites.html">Websites</a><br><br>
+          <a class="navlink" href="stories.html">Stories</a><br><br>
           <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
         </ul>
       </nav><br><br><br><br><br><br><br>
