--- a/stories/samandgreta.html
+++ b/stories/samandgreta.html
@@ -5,21 +5,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="https://ph03be.glitch.me/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="https://phoebe-leong.github.io/favicon.png">
 
     <title>Sam & Greta Story</title>
     
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="https://ph03be.glitch.me/style.css">
+    <link rel="stylesheet" href="https://phoebe-leong.github.io/style.css">
     
   </head>
   <nav class="navbar">
     <ul>
-      <a class="navlink" href="https://ph03be.glitch.me/index.html">Home</a>
+      <a class="navlink" href="https://phoebe-leong.github.io/index.html">Home</a>
       <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a>
-      <a class="navlink" href="https://github.com/phoebe-leong?tab=repositories" target="_blank">Programming</a>
-      <a class="navlink" href="https://ph03be.glitch.me/websites.html">Websites</a>
-      <a class="navlink" href="https://ph03be.glitch.me/stories.html">Stories</a>
+      <a class="navlink" href="https://phoebe-leong.github.io/projects.html">Programming</a>
+      <a class="navlink" href="https://phoebe-leong.github.io/websites.html">Websites</a>
+      <a class="navlink" href="https://phoebe-leong.github.io/stories.html">Stories</a>
       <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
     </ul>
   </nav><br><br><br><br><br><br><br>
