--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <ul>
         <a class="navlink" href="index.html">Home</a>
         <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a>
-        <a class="navlink" href="https://github.com/phoebe-leong?tab=repositories" target="_blank">Programming</a>
+        <a class="navlink" href="projects.html" target="_blank">Programming</a>
         <a class="navlink" href="websites.html">Websites</a>
         <a class="navlink" href="stories.html">Stories</a>
         <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
