--- a/mobile/stories.html
+++ b/mobile/stories.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="https://phoebe-leong.github.io/favicon.png">
 
     <title>Stories</title>
     
@@ -15,11 +15,11 @@
   </head>
   <nav class="navbar">
     <ul>
-      <a class="navlink" href="https://ph03be.glitch.me/mobile/index.html">Home</a><br><br>
+      <a class="navlink" href="index.html">Home</a><br><br>
       <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a><br><br>
-      <a class="navlink" href="https://github.com/phoebe-leong?tab=repositories" target="_blank">Programming</a><br><br>
-      <a class="navlink" href="https://phoebe-leong.github.io/mobile/websites.html">Websites</a><br><br>
-      <a class="navlink" href="https://phoebe-leong.github.io/mobile/stories.html">Stories</a><br><br>
+      <a class="navlink" href="projects.html">Programming</a><br><br>
+      <a class="navlink" href="websites.html">Websites</a><br><br>
+      <a class="navlink" href="stories.html">Stories</a><br><br>
       <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
     </ul>
   </nav><br><br><br><br><br><br><br>
