--- a/mobile/stories/destructionofearth.html
+++ b/mobile/stories/destructionofearth.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="https://ph03be.glitch.me/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="https://phoebe-leong.github.io/favicon.png">
 
     <title>The Destruction of Earth as we know it</title>
     
@@ -15,9 +15,9 @@
   </head>
   <nav class="navbar">
     <ul>
-      <a class="navlink" href="https://ph03be.glitch.me/mobile/index.html">Home</a>
+      <a class="navlink" href="https://phoebe-leong.github.io/mobile/index.html">Home</a>
       <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a>
-      <a class="navlink" href="https://github.com/phoebe-leong?tab=repositories" target="_blank">Programming</a>
+      <a class="navlink" href="https://phoebe-leong.github.io/mobile/projects.html" target="_blank">Programming</a>
       <a class="navlink" href="https://ph03be.glitch.me/mobile/websites.html">Websites</a>
       <a class="navlink" href="https://ph03be.glitch.me/mobile/stories.html">Stories</a>
       <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
