added discord bots to projects.html

--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,8 @@
                 <li><a href="https://github.com/phoebe-leong/CodeHub">CodeHub</a></li>
                 <li><a href="https://github.com/phoebe-leong/CapitalismInANutshell">Capitalism In A Nutshell</a></li>
                 <li><a href="https://phoebe-leong.github.io/login-proj/">Login</a></li> 
+                <li><a href="https://phoebe-leong.github.io/discord-bot">discord-bot</a></li>
+                <li><a href="https://phoebe-leong.github.io/hugbot">HugBot</a></li>
             </ul>
           </main>
       </body>
