--- a/mobile/projects.html
+++ b/mobile/projects.html
@@ -22,7 +22,9 @@
                 <h2>Projects</h2>
                 <li><a href="https://github.com/phoebe-leong/CodeHub">CodeHub</a></li>
                 <li><a href="https://github.com/phoebe-leong/CapitalismInANutshell">Capitalism In A Nutshell</a></li>
-                <li><a href="https://phoebe-leong.github.io/login-proj/">Login</a></li> 
+                <li><a href="https://phoebe-leong.github.io/login-proj">Login</a></li> 
+                <li><a href="https://phoebe-leong.github.io/discord-bot">discord-bot</a></li>
+                <li><a href="https://phoebe-leong.github.io/hugbot">HugBot</a></li>
             </ul>
         </main>
     </body>
