--- a/mobile/projects.html
+++ b/mobile/projects.html
@@ -24,7 +24,7 @@
                 <li><a href="https://github.com/phoebe-leong/CapitalismInANutshell">Capitalism In A Nutshell</a></li>
                 <li><a href="https://phoebe-leong.github.io/login-proj">Login</a></li> 
                 <li><a href="https://phoebe-leong.github.io/discord-bot">discord-bot</a></li>
-                <li><a href="https://phoebe-leong.github.io/hugbot">HugBot</a></li>
+                <li><a href="https://phoebe-leong.github.io/phoebe-hugbot/">HugBot</a></li>
             </ul>
         </main>
     </body>
