--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="https://phoebe-leong.github.io/favicon.png">
+        <title>Projects</title>
     </head>
     <nav class="navbar">
         <ul>
