added more descriptive title to login

--- a/mobile/projects.html
+++ b/mobile/projects.html
@@ -22,7 +22,7 @@
                 <h2>Projects</h2>
                 <li><a href="https://github.com/phoebe-leong/CodeHub">CodeHub</a></li>
                 <li><a href="https://github.com/phoebe-leong/Capitalism-In-A-Nutshell">Capitalism In A Nutshell</a></li>
-                <li><a href="https://phoebe-leong.github.io/login-proj">Login</a></li> 
+                <li><a href="https://phoebe-leong.github.io/login-proj">C++ Login</a></li> 
                 <li><a href="https://phoebe-leong.github.io/phoebe-hugbot/">HugBot</a></li>
             </ul>
         </main>
