added pride corners to desktop version of site

--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+      <script type="text/javascript" src="https://cdn.pride.codes/js/codecorner.js"></script>
+
       <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="https://phoebe-leong.github.io/favicon.png">
