just a few changes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </section><br><br><br><br>
     </main>
     <footer class="copyright">
-      Copyright &copy; PH03be 2021 
+      Copyright &copy; PH03be 
     </footer>
   </body>
 </html>
