--- a/projects.html
+++ b/projects.html
@@ -26,5 +26,8 @@
                 <li><a href="https://phoebe-leong.github.io/phoebe-hugbot/">HugBot</a></li>
             </ul>
           </main>
+          <p class="copyright">
+            Copyright &copy; PH03be
+          </p>
       </body>
 </html>
