--- a/websites.html
+++ b/websites.html
@@ -37,7 +37,7 @@
     </ul>
     <br><br><br>
     <p class="copyright">
-      Copyright &copy; PH03be 2021
+      Copyright &copy; PH03be
     </p>
   </body>
 </html>
