--- a/mobile/index.html
+++ b/mobile/index.html
@@ -66,7 +66,7 @@
         </ul>
       </section>
       <p class="copyright">
-        Copyright &copy; PH03be 2021<br> 
+        Copyright &copy; PH03be 
       </p>
     </main>
   </body>
