--- a/mobile/stories/samandgreta.html
+++ b/mobile/stories/samandgreta.html
@@ -39,7 +39,7 @@
     </a>
     <br><br><br>
     <p class="copyright">
-      Copyright &copy; PH03be 2021
+      Copyright &copy; PH03be
     </p>
   </body>
 </html>
