--- a/stories.html
+++ b/stories.html
@@ -35,7 +35,7 @@
     </ul>
     <br><br><br>
     <p class="copyright">
-      Copyright &copy; PH03be 2021
+      Copyright &copy; PH03be
     </p>
   </body>
 </html>
