--- a/stories/destructionofearth.html
+++ b/stories/destructionofearth.html
@@ -38,7 +38,7 @@
     </a>
     <br><br><br>
     <p class="copyright">
-      Copyright &copy; PH03be 2021
+      Copyright &copy; PH03be
     </p>
   </body>
 </html>
