--- a/stories/theinvisiblegirl.html
+++ b/stories/theinvisiblegirl.html
@@ -28,7 +28,7 @@
         The Invisible Girl
       </h2>
     <p class="info">
-      Read this gentle understanding story about the "ïnvisible" Phoebe and her developing friendship and love.<br>
+      Read this gentle understanding story about the "invisible" Phoebe and her developing friendship and love.<br>
       Genre: Romance<br><br>
     </p>
     <a href="https://cdn.glitch.com/ca419883-a7a2-45f5-8264-3fc76385439f%2Fthe%20invisible%20girl%20-%20PH03be.pdf?v=1620203271753" target="_blank">
@@ -38,7 +38,7 @@
     </a>
     <br><br><br>
     <p class="copyright">
-      Copyright &copy; PH03be 2021
+      Copyright &copy; PH03be
     </p>
   </body>
 </html>
