made projects.html mobile compatible

--- a/mobile/projects.html
+++ b/mobile/projects.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="https://phoebe-leong.github.io/favicon.png">
+        <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>Projects</title>
     </head>
     <nav class="navbar">
