--- a/mobile/stories/phebe.html
+++ b/mobile/stories/phebe.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="https://phoebe-leong.github.io/favicon.png">
 
-    <title>The Invisible Girl</title>
+    <title>Phebe</title>
     
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="../style.css">
@@ -15,23 +15,23 @@
   </head>
   <nav class="navbar">
     <ul>
-      <a class="navlink" href="../index.html">Home</a><br><br>
-      <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a><br><br>
-      <a class="navlink" href="../projects.html">Programming</a><br><br>
-      <a class="navlink" href="../websites.html">Websites</a><br><br>
-      <a class="navlink" href="../stories.html">Stories</a><br><br>
+      <a class="navlink" href="../index.html">Home</a>
+      <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a>
+      <a class="navlink" href="../projects.html">Programming</a>
+      <a class="navlink" href="..//websites.html">Websites</a>
+      <a class="navlink" href="../stories.html">Stories</a>
       <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
     </ul>
   </nav><br><br><br><br><br><br><br>
   <body><br>
       <h2>
-        The Invisible Girl
+        Phebe
       </h2>
     <p class="info">
-      Read this gentle understanding story about the "invisible" Phoebe and her developing friendship and love.<br>
+      Watch Phoebe become the most popular girl in her class, and then realise life was better without everyone liking her<br>
       Genre: Romance<br><br>
     </p>
-    <a href="https://cdn.glitch.com/ca419883-a7a2-45f5-8264-3fc76385439f%2Fthe%20invisible%20girl%20-%20PH03be.pdf?v=1620203271753" target="_blank">
+    <a href="https://cdn.glitch.com/ca419883-a7a2-45f5-8264-3fc76385439f%2Fphebe.pdf?v=1622763291573" target="_blank">
       <button>
         Read
       </button>
