--- a/mobile/stories/redpandawithbrownhair.html
+++ b/mobile/stories/redpandawithbrownhair.html
@@ -10,16 +10,16 @@
     <title>The Red Panda With Brown Hair</title>
     
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="https://phoebe-leong.github.io/mobile/style.css">
+    <link rel="stylesheet" href="../style.css">
     
   </head>
   <nav class="navbar">
     <ul>
-      <a class="navlink" href="https://phoebe-leong.github.io/mobile/index.html">Home</a><br>
+      <a class="navlink" href="../index.html">Home</a><br>
       <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a><br>
-      <a class="navlink" href="https://phoebe-leong.github.io/mobile/projects.html">Programming</a><br>
-      <a class="navlink" href="https://phoebe-leong.github.io/mobile/websites.html">Websites</a><br>
-      <a class="navlink" href="https://phoebe-leong.github.io/mobile/stories.html">Stories</a><br>
+      <a class="navlink" href="../projects.html">Programming</a><br>
+      <a class="navlink" href="../websites.html">Websites</a><br>
+      <a class="navlink" href="../stories.html">Stories</a><br>
       <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
     </ul>
   </nav><br><br><br><br><br><br><br>
