--- a/stories.html
+++ b/stories.html
@@ -15,9 +15,9 @@
   </head>
   <nav class="navbar">
     <ul>
-      <a class="navlink" href="https://ph03be.glitch.me/index.html">Home</a>
+      <a class="navlink" href="index.html">Home</a>
       <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a>
-      <a class="navlink" href="https://github.com/phoebe-leong?tab=repositories" target="_blank">Programming</a>
+      <a class="navlink" href="projects.html" target="_blank">Programming</a>
       <a class="navlink" href="https://phoebe-leong.github.io/websites.html">Websites</a>
       <a class="navlink" href="https://phoebe-leong.github.io/stories.html">Stories</a>
       <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
@@ -32,6 +32,7 @@
       <li><a href="stories/redpandawithbrownhair.html">The red panda with brown hair - PH03be</a></li>
       <li><a href="stories/theinvisiblegirl.html">The Invisible Girl - PH03be</a></li>
       <li><a href="stories/destructionofearth.html">The destruction of the earth as we know it - PH03be</a></li>
+      <li><a href="stories/phebe.html">Phebe - PH03be</a></li>
     </ul>
     <br><br><br>
     <p class="copyright">
