--- a/stories/destructionofearth.html
+++ b/stories/destructionofearth.html
@@ -10,7 +10,7 @@
     <title>The Destruction of Earth as we know it</title>
     
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="https://phoebe-leong.github.io/style.css">
+    <link rel="stylesheet" href="../style.css">
     
   </head>
   <nav class="navbar">
@@ -25,7 +25,7 @@
   </nav><br><br><br><br><br><br><br>
   <body><br>
       <h2>
-        The Invisible Girl
+        Destruction of Earth as we know it
       </h2>
     <p class="info">
       Follow two university students as they attempt to save the world by making a time machine.<br>
