--- a/websites.html
+++ b/websites.html
@@ -29,11 +29,11 @@
         Websites
       </h2>
       <!--List in chronological order - Most recent first on list-->
-      <li><a href="https://google-redesign.glitch.me/" target="_blank">Google Redesign - PH03be 2021</a></li>
-      <li><a href="https://edible-cookie-dough-phoebe.glitch.me/" target="_blank">Edible Cookie Dough - PH03be 2021</a></li>
-      <li><a href="https://lofilist.glitch.me/" target="_blank">Lofi List - PH03be 2021</a></li>
-      <li><a href="https://github.com/phoebe-leong/awco" target="_blank">AWCO Source Code - PH03be 2021</a></li>
-      <li><a href="https://awco.glitch.me/" target="_blank">AWCO - PH03be 2021</a></li>
+      <li><a href="https://google-redesign.glitch.me/" target="_blank">Google Redesign - PH03be</a></li>
+      <li><a href="https://edible-cookie-dough-phoebe.glitch.me/" target="_blank">Edible Cookie Dough - PH03be</a></li>
+      <li><a href="https://lofilist.glitch.me/" target="_blank">Lofi List - PH03be</a></li>
+      <li><a href="https://github.com/phoebe-leong/awco" target="_blank">AWCO Source Code - PH03be</a></li>
+      <li><a href="https://awco.glitch.me/" target="_blank">AWCO - PH03be</a></li>
     </ul>
     <br><br><br>
     <p class="copyright">
