--- a/mobile/stories.html
+++ b/mobile/stories.html
@@ -31,7 +31,8 @@
       <li><a href="stories/samandgreta.html">Sam & Greta Story - PH03be</a></li>
       <li><a href="stories/redpandawithbrownhair.html">The red panda with brown hair - PH03be</a></li>
       <li><a href="stories/theinvisiblegirl.html">The Invisible Girl - PH03be</a></li>
-      <li><a href="stories/destructionofearth.html">The destruction of earth as we know it</a></li>
+      <li><a href="stories/destructionofearth.html">The destruction of earth as we know it - PH03be</a></li>
+      <li><a href="stories/phebe.html">Phebe - PH03be</a></li>
     </ul>
     <br><br><br>
     <p class="copyright">
