--- a/mobile/stories/destructionofearth.html
+++ b/mobile/stories/destructionofearth.html
@@ -10,22 +10,22 @@
     <title>The Destruction of Earth as we know it</title>
     
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="https://phoebe-leong.github.io/mobile/style.css">
+    <link rel="stylesheet" href="../style.css">
     
   </head>
   <nav class="navbar">
     <ul>
-      <a class="navlink" href="https://phoebe-leong.github.io/mobile/index.html">Home</a>
+      <a class="navlink" href="../index.html">Home</a>
       <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a>
-      <a class="navlink" href="https://phoebe-leong.github.io/mobile/projects.html" target="_blank">Programming</a>
-      <a class="navlink" href="https://ph03be.glitch.me/mobile/websites.html">Websites</a>
-      <a class="navlink" href="https://ph03be.glitch.me/mobile/stories.html">Stories</a>
+      <a class="navlink" href="../projects.html" target="_blank">Programming</a>
+      <a class="navlink" href="../websites.html">Websites</a>
+      <a class="navlink" href="../stories.html">Stories</a>
       <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
     </ul>
   </nav><br><br><br><br><br><br><br>
   <body><br>
       <h2>
-        The Invisible Girl
+        Destruction of Earth as we know it
       </h2>
     <p class="info">
       Follow two university students as they attempt to save the world by making a time machine.<br>
