--- a/projects.html
+++ b/projects.html
@@ -20,10 +20,10 @@
           <main>
             <ul>
                 <h2>Projects</h2>
-                <li><a href="https://github.com/phoebe-leong/CodeHub">CodeHub</a></li>
-                <li><a href="https://github.com/phoebe-leong/Capitalism-In-A-Nutshell">Capitalism In A Nutshell</a></li>
-                <li><a href="https://phoebe-leong.github.io/login-proj/">C++ Login</a></li> 
-                <li><a href="https://phoebe-leong.github.io/phoebe-hugbot/">HugBot</a></li>
+                <li><a href="https://github.com/phoebe-leong/CodeHub">CodeHub - PH03be</a></li>
+                <li><a href="https://github.com/phoebe-leong/Capitalism-In-A-Nutshell">Capitalism In A Nutshell - PH03be</a></li>
+                <li><a href="https://phoebe-leong.github.io/login-proj/">C++ Login - PH03be</a></li> 
+                <li><a href="https://phoebe-leong.github.io/phoebe-hugbot/">HugBot - PH03be</a></li>
             </ul>
           </main>
           <p class="copyright">
