updated programming langs

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     
     <meta property="og:title" content="This Is PH03be"/>
-    <meta property="og:description" content="This Is PH03be: Web Designer, Musician, Developer, Producer, Author"/>
+    <meta property="og:description" content="This Is PH03be: Web Designer, Musician, Developer, Author"/>
     <meta property="og:image" content="favicon.png"/>
     <meta name="title" content="This Is PH03be"/>
-    <meta name="description" content="This Is PH03be: Web Designer, Musician, Developer, Producer, Author"/>
-    <meta name="keywords" content="phoebe, web designer, programming, ph03be website, web design, phoebe soundcloud, this is phoebe">
+    <meta name="description" content="This Is PH03be: Web Designer, Musician, Developer, Author"/>
+    <meta name="keywords" content="ph03be, web designer, phoebe soundcloud">
     <script src="detectmobilebrowser.js"></script>
     <script src="madewith.js"></script>
 
@@ -64,7 +64,7 @@
           <li class="info">Name: Phoebe</li><br>
           <li class="info">Age: 13</li><br>
           <li class="info">Lives: Sydney, Australia</li><br>
-          <li class="info">Languages learnt: HTML, CSS, JavaScript (<a class="infoLink" href="https://phoebe-github-bot.glitch.me/" target="_blank">discord.js</a>), C++, C</li><br>
+          <li class="info">Languages learnt: HTML, CSS, C++</li><br>
           <li class="info">Musical Instruments learnt: Drums/Percussion, Singing</li><br>
           <li class="info">Does in her/their spare time: Browses GitHub, Codes, Writes love stories, Plays drums, Watches YouTube</li><br>
           <li class="info">MBTI: <a class="infoLink" href="https://www.16personalities.com/intp-personality" target="_blank">INTP-T</a></li><br>
