--- a/mobile/index.html
+++ b/mobile/index.html
@@ -58,7 +58,7 @@
           <li class="info">Name: Phoebe</li><br>
           <li class="info">Age: 13</li><br>
           <li class="info">Lives: Sydney, Australia</li><br>
-          <li class="info">Languages learnt: HTML, CSS, JavaScript (<a class="infoLink" href="https://phoebe-github-bot.glitch.me/" target="_blank">discord.js</a>), C++, C</li><br>
+          <li class="info">Languages learnt: HTML, CSS, C++</li><br>
           <li class="info">Musical Instruments learnt: Drums/Percussion, Singing</li><br>
           <li class="info">Does in her/their spare time: Browses GitHub, Codes, Plays drums, watches YouTube</li><br>
           <li class="info">MBTI: <a class="infoLink" href="https://www.16personalities.com/intp-personality" target="_blank">INTP-T</a></li><br>
