stylesheet modification for desktop
mobile is yet to come i am working on it rn

--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset="utf-8">
       <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="universal.css">
       <link rel="icon" href="https://phoebe-leong.github.io/favicon.png">
       <title>Projects</title>
     </head>
@@ -20,10 +21,10 @@
           <main>
             <ul>
                 <h2>Projects</h2>
-                <li><a href="https://github.com/phoebe-leong/CodeHub">CodeHub - PH03be</a></li>
-                <li><a href="https://github.com/phoebe-leong/Capitalism-In-A-Nutshell">Capitalism In A Nutshell - PH03be</a></li>
-                <li><a href="https://phoebe-leong.github.io/login-proj/">C++ Login - PH03be</a></li> 
-                <li><a href="https://phoebe-leong.github.io/phoebe-hugbot/">HugBot - PH03be</a></li>
+                <li><a href="https://github.com/phoebe-leong/CodeHub">CodeHub</a></li>
+                <li><a href="https://github.com/phoebe-leong/Capitalism-In-A-Nutshell">Capitalism In A Nutshell</a></li>
+                <li><a href="https://phoebe-leong.github.io/login-proj/">C++ Login</a></li> 
+                <li><a href="https://phoebe-leong.github.io/phoebe-hugbot/">HugBot</a></li>
             </ul>
           </main>
           <p class="copyright">
