--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="universal.css">
     
   </head>
   <body>
@@ -49,11 +50,11 @@
         PH03be would later revisit C++ in high school but at the time they didn't know that.<br><br>
   
         She first started as a musician in 2015 when they fell in love with drums in 2015 when her school showcased all of the band instruments.<br>
-        Then in 2020 they launched her <a class="intro-link" href="https://soundcloud.com/cucumber-cat" target="_blank">SoundCloud account</a> and began posting music on it.<br>
+        Then in 2020 they launched her <a href="https://soundcloud.com/cucumber-cat" target="_blank">SoundCloud account</a> and began posting music on it.<br>
         In 2021 she posted music frequently on it until late March due to lack of inspiration.<br><br>
   
         She plans to get a computer science degree and hopefully post on their SoundCloud more. PH03be may even use FAANG as a stepping stone to create her own startup.<br>
-        If you have any feedback or enquiries, please email her at <a class="intro-link" href="mailto:phoebeleong8@gmail.com" target="_blank">phoebeleong8@gmail.com</a>.<br>
+        If you have any feedback or enquiries, please email her at <a href="mailto:phoebeleong8@gmail.com" target="_blank">phoebeleong8@gmail.com</a>.<br>
       </p><br><br><br><br>
       </section>
       <section id="info">
@@ -67,7 +68,7 @@
           <li class="info">Languages learnt: HTML, CSS, C++</li><br>
           <li class="info">Musical Instruments learnt: Drums/Percussion, Singing</li><br>
           <li class="info">Does in her/their spare time: Browses GitHub, Codes, Writes love stories, Plays drums, Watches YouTube</li><br>
-          <li class="info">MBTI: <a class="infoLink" href="https://www.16personalities.com/intp-personality" target="_blank">INTP-T</a></li><br>
+          <li class="info">MBTI: <a href="https://www.16personalities.com/intp-personality" target="_blank">INTP-T</a></li><br>
         </ul>
       </section><br><br><br><br>
     </main>
