--- a/stories.html
+++ b/stories.html
@@ -11,6 +11,7 @@
     
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="universal.css">
     
   </head>
   <nav class="navbar">
@@ -28,11 +29,11 @@
       <h2>
         Stories
       </h2>
-      <li><a href="stories/samandgreta.html">Sam & Greta Story - PH03be</a></li>
-      <li><a href="stories/redpandawithbrownhair.html">The red panda with brown hair - PH03be</a></li>
-      <li><a href="stories/theinvisiblegirl.html">The Invisible Girl - PH03be</a></li>
-      <li><a href="stories/destructionofearth.html">The destruction of the earth as we know it - PH03be</a></li>
-      <li><a href="stories/phebe.html">Phebe - PH03be</a></li>
+      <li><a href="stories/samandgreta.html">Sam & Greta Story</a></li>
+      <li><a href="stories/redpandawithbrownhair.html">The red panda with brown hair</a></li>
+      <li><a href="stories/theinvisiblegirl.html">The Invisible Girl</a></li>
+      <li><a href="stories/destructionofearth.html">The destruction of the earth as we know it</a></li>
+      <li><a href="stories/phebe.html">Phebe</a></li>
     </ul>
     <br><br><br>
     <p class="copyright">
