--- a/stories/destructionofearth.html
+++ b/stories/destructionofearth.html
@@ -11,6 +11,7 @@
     
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../universal.css">
     
   </head>
   <nav class="navbar">
