--- a/websites.html
+++ b/websites.html
@@ -11,6 +11,7 @@
     
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="universal.css">
     
   </head>
   <nav class="navbar">
@@ -29,11 +30,11 @@
         Websites
       </h2>
       <!--List in chronological order - Most recent first on list-->
-      <li><a href="https://google-redesign.glitch.me/" target="_blank">Google Redesign - PH03be</a></li>
-      <li><a href="https://edible-cookie-dough-phoebe.glitch.me/" target="_blank">Edible Cookie Dough - PH03be</a></li>
+      <li><a href="https://google-redesign.glitch.me/" target="_blank">Google Redesign</a></li>
+      <li><a href="https://edible-cookie-dough-phoebe.glitch.me/" target="_blank">Edible Cookie Dough</a></li>
       <li><a href="https://lofilist.glitch.me/" target="_blank">Lofi List - PH03be</a></li>
-      <li><a href="https://github.com/phoebe-leong/awco" target="_blank">AWCO Source Code - PH03be</a></li>
-      <li><a href="https://awco.glitch.me/" target="_blank">AWCO - PH03be</a></li>
+      <li><a href="https://github.com/phoebe-leong/awco" target="_blank">AWCO Source Code</a></li>
+      <li><a href="https://awco.glitch.me/" target="_blank">AWCO</a></li>
     </ul>
     <br><br><br>
     <p class="copyright">
