--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     
-    <meta property="og:title" content="This Is PH03be"/>
-    <meta property="og:description" content="This Is PH03be: Web Designer, Musician, Developer, Author"/>
+    <meta property="og:title" content="this is ph3b3"/>
+    <meta property="og:description" content="this is ph3b3: Web Designer, Musician, Developer, Author"/>
     <meta property="og:image" content="favicon.png"/>
-    <meta name="title" content="This Is PH03be"/>
-    <meta name="description" content="This Is PH03be: Web Designer, Musician, Developer, Author"/>
-    <meta name="keywords" content="ph03be, web designer, phoebe soundcloud">
+    <meta name="title" content="this is ph3b3"/>
+    <meta name="description" content="this is ph3b3: Web Designer, Musician, Developer, Author"/>
+    <meta name="keywords" content="ph3b3, web designer, phoebe soundcloud">
     <script src="detectmobilebrowser.js"></script>
     <script src="madewith.js"></script>
 
-    <title>This Is PH03be</title>
+    <title>this is ph3b3</title>
     
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -40,26 +40,26 @@
       <br><br><br>
       <h2 id="phoebe">
         This Is<br>
-        PH03be
+        ph3b3
       </h2><br><br><br><br><br><br><br>
     </div><br><br>
     <section id="text">
       <p>
-        PH03be first started learning HTML and CSS around 2018 when she was in year 5.<br>
+        ph3b3 first started learning HTML and CSS around 2018 when she was in year 5.<br>
         The first real programming language she (half) learnt was C++, when she decided to make a program for her crush. It failed.<br>
-        PH03be would later revisit C++ in high school but at the time they didn't know that.<br><br>
+        ph3b3 would later revisit C++ in high school but at the time they didn't know that.<br><br>
   
         She first started as a musician in 2015 when they fell in love with drums in 2015 when her school showcased all of the band instruments.<br>
         Then in 2020 they launched her <a href="https://soundcloud.com/cucumber-cat" target="_blank">SoundCloud account</a> and began posting music on it.<br>
         In 2021 she posted music frequently on it until late March due to lack of inspiration.<br><br>
   
-        She plans to get a computer science degree and hopefully post on their SoundCloud more. PH03be may even use FAANG as a stepping stone to create her own startup.<br>
+        She plans to get a computer science degree and hopefully post on their SoundCloud more. ph3b3 may even use FAANG as a stepping stone to create her own startup.<br>
         If you have any feedback or enquiries, please email her at <a href="mailto:phoebeleong8@gmail.com" target="_blank">phoebeleong8@gmail.com</a>.<br>
       </p><br><br><br><br>
       </section>
       <section id="info">
         <h2>
-          General Info About PH03be
+          General Info About ph3b3
         </h2><br>
         <ul>
           <li class="info">Name: Phoebe</li><br>
@@ -73,7 +73,7 @@
       </section><br><br><br><br>
     </main>
     <footer class="copyright">
-      Copyright &copy; PH03be 
+      Copyright &copy; ph3b3 
     </footer>
   </body>
 </html>
