--- a/mobile/projects.html
+++ b/mobile/projects.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../universal.css">
         <link rel="icon" href="https://phoebe-leong.github.io/favicon.png">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <title>Projects</title>
     </head>
     <nav class="navbar">
         <ul>
-          <a class="navlink" href="https://ph03be.glitch.me/mobile/index.html">Home</a><br><br>
+          <a class="navlink" href="index.html">Home</a><br><br>
           <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a><br><br>
           <a class="navlink" href="projects.html">Programming</a><br><br>
           <a class="navlink" href="websites.html">Websites</a><br><br>
