--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="main-intro">
       <br><br><br>
       <h2 id="phoebe">
-        This Is<br>
+        this Is<br>
         ph3b3
       </h2><br><br><br><br><br><br><br>
     </div><br><br>
