--- a/mobile/stories/destructionofearth.html
+++ b/mobile/stories/destructionofearth.html
@@ -1,44 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta name="robots" content="noindex">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="https://phoebe-leong.github.io/favicon.png">
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>destruction of earth as we know it</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>The Destruction of Earth as we know it</title>
-    
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="../style.css">
-    
-  </head>
-  <nav class="navbar">
-    <ul>
-      <a class="navlink" href="../index.html">Home</a>
-      <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a>
-      <a class="navlink" href="../projects.html" target="_blank">Programming</a>
-      <a class="navlink" href="../websites.html">Websites</a>
-      <a class="navlink" href="../stories.html">Stories</a>
-      <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
-    </ul>
-  </nav><br><br><br><br><br><br><br>
-  <body><br>
-      <h2>
-        Destruction of Earth as we know it
-      </h2>
-    <p class="info">
-      Follow two university students as they attempt to save the world by making a time machine.<br>
-      Genre: Science Fiction<br><br>
-    </p>
-    <a href="https://cdn.glitch.com/ca419883-a7a2-45f5-8264-3fc76385439f%2Fthe%20destruction%20of%20earth%20as%20we%20know%20-PH03be.pdf?v=1620273993789" target="_blank">
-      <button>
-        Read
-      </button>
-    </a>
-    <br><br><br>
-    <p class="copyright">
-      Copyright &copy; PH03be
-    </p>
-  </body>
+        <link rel="icon" href="../favicon.png">
+        <link rel="stylesheet" href="../style.css">
+    </head>
+    <body>
+        <main>
+            <nav id="navbar">
+                <ul>
+                    <a href="../index.html">home</a><br>
+                    <a href="https://soundcloud.com/ph3b3">music</a><br>
+                    <a href="https://github.com/phoebe-leong/?tab=repositories">github</a><br>
+                    <a href="../stories.html">stories</a>
+                </ul>
+            </nav><br><br><br><br><br>
+            <h2>
+                The destruction of Earth as we know it
+            </h2>
+            <p>
+                Follow two university students as the attempt to save the world by making a time machine<br>
+                Genre: Science Fiction<br><br>
+
+                <a href="pdfs/thedestructionofearth.pdf">
+                    <button>
+                        Read
+                    </button>
+                </a>
+            </p>
+        </main>
+    </body>
 </html>
