--- a/mobile/stories/theinvisiblegirl.html
+++ b/mobile/stories/theinvisiblegirl.html
@@ -1,44 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta name="robots" content="noindex">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="https://phoebe-leong.github.io/favicon.png">
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>the invisible girl</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>The Invisible Girl</title>
-    
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="../style.css">
-    
-  </head>
-  <nav class="navbar">
-    <ul>
-      <a class="navlink" href="../index.html">Home</a><br><br>
-      <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a><br><br>
-      <a class="navlink" href="../projects.html">Programming</a><br><br>
-      <a class="navlink" href="../websites.html">Websites</a><br><br>
-      <a class="navlink" href="../stories.html">Stories</a><br><br>
-      <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
-    </ul>
-  </nav><br><br><br><br><br><br><br>
-  <body><br>
-      <h2>
-        The Invisible Girl
-      </h2>
-    <p class="info">
-      Read this gentle understanding story about the "invisible" Phoebe and her developing friendship and love.<br>
-      Genre: Romance<br><br>
-    </p>
-    <a href="https://cdn.glitch.com/ca419883-a7a2-45f5-8264-3fc76385439f%2Fthe%20invisible%20girl%20-%20PH03be.pdf?v=1620203271753" target="_blank">
-      <button>
-        Read
-      </button>
-    </a>
-    <br><br><br>
-    <p class="copyright">
-      Copyright &copy; PH03be
-    </p>
-  </body>
+        <link rel="icon" href="../favicon.png">
+        <link rel="stylesheet" href="../style.css">
+    </head>
+    <body>
+        <main>
+            <nav id="navbar">
+                <ul>
+                    <a class="navlink" href="../index.html">home</a><br>
+                    <a class="navlink" href="https://soundcloud.com/ph3b3">music</a><br>
+                    <a class="navlink" href="https://github.com/phoebe-leong/?tab=repositories">github</a><br>
+                    <a class="navlink" href="../stories.html">stories</a>
+                </ul>
+            </nav><br><br><br><br><br>
+            <h2>
+                The invisible girl
+            </h2>
+            <p>
+                Read this gentle understanding story about the "invisible" Phoebe and her developing friendship and love<br>
+                Genre: Romance<br><br>
+                <a href="pdfs/theinvisiblegirl.pdf">
+                    <button>
+                        Read
+                    </button>
+                </a>
+            </p>
+        </main>
+    </body>
 </html>
