--- a/stories/redpandawithbrownhair.html
+++ b/stories/redpandawithbrownhair.html
@@ -1,45 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta name="robots" content="noindex">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="https://phoebe-leong.github.io/favicon.png">
-
-    <title>The Red Panda With Brown Hair</title>
-    
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="../universal.css">
-    
-  </head>
-  <nav class="navbar">
-    <ul>
-      <a class="navlink" href="../index.html">Home</a>
-      <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a>
-      <a class="navlink" href="../projects.html">Programming</a>
-      <a class="navlink" href="../websites.html">Websites</a>
-      <a class="navlink" href="../stories.html">Stories</a>
-      <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
-    </ul>
-  </nav><br><br><br><br><br><br><br>
-  <body><br>
-      <h2>
-        The Red Panda With Brown Hair
-      </h2>
-    <p class="info">
-      A 14 year old girl has a crush on a 16 year old girl at her school, and wants to ask her a few questions about life, the universe, and everything. But first she has to come out of the bushes.<br>
-      Genre: Romance<br><br>
-    </p>
-    <a href="https://cdn.glitch.com/ca419883-a7a2-45f5-8264-3fc76385439f%2FThe%20red%20panda%20with%20brown%20hair%20-%20PH03be.pdf?v=1620029870921" target="_blank">
-      <button>
-        Read
-      </button>
-    </a>
-    <br><br><br>
-    <p class="copyright">
-      Copyright &copy; PH03be
-    </p>
-  </body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>red panda with brown hair</title>
+        <link rel="icon" href="../favicon.png">
+        <link rel="stylesheet" href="../style.css">
+    </head>
+    <body>
+        <main>
+            <nav id="navbar">
+                <ul>
+                    <a href="../index.html">home</a> -
+                    <a href="https://soundcloud.com/ph3b3">music</a> -
+                    <a href="https://github.com/phoebe-leong/?tab=repositories">github</a> -
+                    <a href="../stories.html">stories</a>
+                </ul>
+            </nav><br><br><br><br><br>
+            <h2>
+                The red panda with brown hair
+            </h2>
+            <p>
+            A 14 year old girl has a crush on a 16 year old girl at her school and wants to ask her a few questions about life, the universe, and everything. But first she has to come out of the bushes<br>
+            Genre: Romance</p>
+            <a href="pdfs/redpandawithbrownhair.pdf">
+                <button>
+                    Read
+                </button>
+            </a>
+        </main>
+    </body>
 </html>
