--- a/mobile/404.html
+++ b/mobile/404.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="universal.css"> 
-    <link rel="icon" href="favicon.png">
-    <title>Page Not Found!</title>
-</head>
-    <nav class="navbar">
-        <ul>
-          <a class="navlink" href="index.html">Home</a><br>
-          <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a><br>
-          <a class="navlink" href="projects.html" target="_blank">Programming</a><br>
-          <a class="navlink" href="websites.html">Websites</a><br>
-          <a class="navlink" href="stories.html">Stories</a><br>
-          <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a><br>
-        </ul>
-      </nav><br><br><br><br><br><br><br>
-      <body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>404</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.png">
+    </head>
+    <body>
         <main>
-          <center>
-            <h1>404</h1>
-            <p>The requested page could not be found :(</p>
-          </center>
+            <nav id="navbar">
+                <ul>
+                    <a href="index.html">home</a><br>
+                    <a href="https://soundcloud.com/ph3b3">music</a><br>
+                    <a href="https://github.com/ph3b3/?tab=repositories">github</a><br>
+                    <a href="stories.html">stories</a>
+                </ul>
+            </nav><br><br><br><br><br>
+            <center>
+                <h1>
+                    404
+                </h1>
+                <p>( page not found )</p>
+            </center>
         </main>
-</body>
+    </body>
 </html>
