--- a/mobile/stories.html
+++ b/mobile/stories.html
@@ -1,43 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta name="robots" content="noindex">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="https://phoebe-leong.github.io/favicon.png">
+<html>
+    <head>
+        <meta charset="utf-8">
+        <link rel="icon" href="favicon.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Stories</title>
-    
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../universal.css">
-    
-  </head>
-  <nav class="navbar">
-    <ul>
-      <a class="navlink" href="index.html">Home</a><br><br>
-      <a class="navlink" href="https://soundcloud.com/cucumber-cat" target="_blank">Music</a><br><br>
-      <a class="navlink" href="projects.html">Programming</a><br><br>
-      <a class="navlink" href="websites.html">Websites</a><br><br>
-      <a class="navlink" href="stories.html">Stories</a><br><br>
-      <a class="navlink" href="mailto:phoebeleong8@gmail.com" target="_blank">Contact</a>
-    </ul>
-  </nav><br><br><br><br><br><br><br>
-  <body><br>
-    <ul>
-      <h2>
-        Stories
-      </h2>
-      <li><a href="stories/samandgreta.html">Sam & Greta Story - PH03be</a></li>
-      <li><a href="stories/redpandawithbrownhair.html">The red panda with brown hair - PH03be</a></li>
-      <li><a href="stories/theinvisiblegirl.html">The Invisible Girl - PH03be</a></li>
-      <li><a href="stories/destructionofearth.html">The destruction of earth as we know it - PH03be</a></li>
-      <li><a href="stories/phebe.html">Phebe - PH03be</a></li>
-    </ul>
-    <br><br><br>
-    <p class="copyright">
-      Copyright &copy; PH03be
-    </p>
-  </body>
+        <link rel="stylesheet" href="style.css">
+        <title>stories</title>
+    </head>
+    <body>
+        <main>
+            <nav id="navbar">
+                <ul>
+                    <a class="navlink" href="index.html">home</a><br>
+                    <a class="navlink" href="https://soundcloud.com/ph3b3">music</a><br>
+                    <a class="navlink" href="https://github.com/phoebe-leong/?tab=repositories">github</a><br>
+                    <a class="navlink" href="stories.html">stories</a>
+                </ul>
+            </nav><br><br><br><br><br>
+            <h2>Stories</h2>
+            <ul>
+                <a href="stories/samandgreta.html">sam and greta</a><br>
+                <a href="stories/redpandawithbrownhair.html">the red panda with brown hair</a><br>
+                <a href="stories/theinvisiblegirl.html">the invisible girl</a><br>
+                <a href="stories/destructionofearth.html">the destruction of earth as we know it</a>
+            </ul>
+        </main>
+    </body>
 </html>
