--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li class="info">Name: Phoebe/Darius</li><br>
                 <li class="info">Age: 13</li><br>
                 <li class="info">Lives: Sydney, Australia</li><br>
-                <li class="info">Languages learnt: HTML, CSS, C++, Shell</li><br>
+                <li class="info">Languages learnt: HTML, CSS, C++</li><br>
                 <li class="info">Musical Instruments learnt: Drums/Percussion, Singing</li><br><br>
             </ul>
         </main>
