--- a/stories.html
+++ b/stories.html
@@ -10,9 +10,9 @@
         <main>
             <nav id="navbar">
                 <ul>
-                    <a class="navlink" href="index.html">home</a> -
-                    <a class="navlink" href="https://soundcloud.com/ph3b3">music</a> -
-                    <a class="navlink" href="https://github.com/phoebe-leong/?tab=repositories">github</a> -
+                    <a class="navlink" href="index.html">home</a>
+                    <a class="navlink" href="https://soundcloud.com/ph3b3">music</a>
+                    <a class="navlink" href="https://github.com/phoebe-leong/?tab=repositories">github</a>
                     <a class="navlink" href="stories.html">stories</a>
                 </ul>
             </nav><br><br><br><br><br>
