--- a/404.html
+++ b/404.html
@@ -18,9 +18,9 @@
         <main>
             <nav id="navbar">
                 <ul>
-                    <a href="index.html">home</a> -
-                    <a href="https://soundcloud.com/ph3b3">music</a> -
-                    <a href="https://github.com/ph3b3/?tab=repositories">github</a> -
+                    <a href="index.html">home</a>
+                    <a href="https://soundcloud.com/ph3b3">music</a>
+                    <a href="https://github.com/ph3b3/?tab=repositories">github</a>
                     <a href="stories.html">stories</a>
                 </ul>
             </nav><br><br><br><br><br>
