added new story

--- a/mobile/stories.html
+++ b/mobile/stories.html
@@ -23,7 +23,8 @@
                 <a href="stories/samandgreta.html">sam and greta</a><br>
                 <a href="stories/redpandawithbrownhair.html">the red panda with brown hair</a><br>
                 <a href="stories/theinvisiblegirl.html">the invisible girl</a><br>
-                <a href="stories/destructionofearth.html">the destruction of earth as we know it</a>
+                <a href="stories/destructionofearth.html">the destruction of earth as we know it</a><br>
+                <a href="stories/theknifewithagirl.html">the knife with a girl</a>
             </ul>
         </main>
     </body>
